--- a/Exercicios/ex000/style.css
+++ b/Exercicios/ex000/style.css
@@ -1,20 +1,39 @@
 @charset "UTF-8";
 
-body{
+*{
+    height: auto;
     text-align: justify;
-    background-color: rgb(245, 245, 245);
-    color: rgb(0, 0, 0);
+    font-family: Arial, Helvetica, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+body{
+   background-image: linear-gradient(#18334456);
+   background-attachment: fixed;
+}
+main{
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px;
+    width: 900px;
+    padding: 10px;
+    margin: auto;
 }
 h1{
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(204, 228, 228);
+    background-color: rgb(204, 228, 228);  
 }
-li{
-    color: rgb(0, 71, 117);
-    background-image: url(img/copy.png);
-    background-repeat: no-repeat;
-    
-    background-size: contain;
-      
+
+a{
+    color: blue;
+    text-decoration: none;
+}
+a:visited{
+    color: black;
+}
+a:hover{
+    color: rgb(0, 174, 255);
+    text-decoration: underline;
+}
+.especial{
+    image
 }
